--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   "homepage": "https://github.com/ariporad/birding",
   "devDependencies": {
     "babel-core": "^5.4.7",
-    "babel-eslint": "^3.1.9",
+    "babel-eslint": "^3.1.30",
     "babel-loader": "^5.1.2",
+    "eslint-config-airbnb": "0.0.8",
     "eslint-plugin-react": "^2.3.0",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.9.6",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "dotenv": "^1.2.0",
-    "react": "^0.13.0"
+    "react": "^0.13.0",
+    "react-router": "^1.0.0-rc1"
   }
 }
