--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
   },
   "dependencies": {
     "dotenv": "^1.2.0",
+    "file-loader": "^0.8.4",
     "history": "^1.9.1",
     "react": "^0.13.0",
     "react-bootstrap": "^0.25.2",
-    "react-router": "^1.0.0-rc1"
+    "react-router": "^1.0.0-rc1",
+    "url-loader": "^0.5.6"
   }
 }
