--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-airbnb": "0.0.8",
     "eslint-plugin-react": "^2.3.0",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^2.1.2",
     "webpack": "^1.9.6",
     "webpack-dev-server": "^1.8.2"
   },
@@ -38,7 +39,9 @@
     "history": "^1.9.1",
     "react": "^0.13.0",
     "react-bootstrap": "^0.25.2",
+    "react-redux": "^2.1.2",
     "react-router": "^1.0.0-rc1",
+    "redux": "^3.0.0",
     "url-loader": "^0.5.6"
   }
 }
